<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/managetask_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="任务管理器"
            android:textColor="@color/xiangyabai"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/windows_tools_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical|right">
            <ImageView
                android:id="@+id/min_bn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/min"
                android:layout_gravity="center_vertical"
                />
            <ImageView
                android:id="@+id/close_bn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/close"
                />
        </LinearLayout>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/head"
    android:background="@color/xiangyabai"
    android:orientation="horizontal"
    >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/process_show"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/process_choose_aligo"/>
            <Spinner
                android:id="@+id/process_choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|right"
                android:entries="@array/process_aligo"
                >
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grab_or_not"/>
            <Spinner
                android:id="@+id/grab_choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|right"
                android:entries="@array/grab_or_not"
                >
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/add_process"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:background="@drawable/add"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="就绪队列" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pid"
                        android:gravity="center_horizontal"
                        android:textSize="8sp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/space"
                        android:gravity="center_horizontal"
                        android:textSize="8sp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/priority"
                        android:gravity="center_horizontal"
                        android:textSize="8sp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/exetime"
                        android:gravity="center_horizontal"
                        android:textSize="8sp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="process"
                        android:gravity="center_horizontal"
                        android:textSize="8sp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="wait"
                        android:gravity="center_horizontal"
                        android:textSize="8sp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Rp"
                        android:gravity="center_horizontal"
                        android:textSize="8sp"/>
                </LinearLayout>
                <ListView
                    android:id="@+id/jiuxv_listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="5sp" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="阻塞"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pid"
                        android:gravity="center_horizontal"
                        android:textSize="8sp"/>
                </LinearLayout>

                <ListView
                    android:id="@+id/zuse_listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="5sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="进程"/>
                    <TextView
                        android:id="@+id/current_process_pid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finish_process"/>
                    <ProgressBar
                        android:id="@+id/current_process_finish_process"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                        android:progressDrawable="@drawable/myprogressbar"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/current_process_myprocess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/memory_show"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memory_aligo"/>
            <Spinner
                android:id="@+id/memory_aligo_choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|right"
                android:entries="@array/memory_aligo"
                >
            </Spinner>
        </LinearLayout>
        <TextView
            android:id="@+id/memory_decription"
            android:text="@string/Total_Memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimary"/>
        <LinearLayout
            android:id="@+id/total_memory"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/Been_green"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>

</LinearLayout>

</RelativeLayout>